Fix new files opening in wrong mainwindow

This is a regression of e5f10d40b1c5a926e39dff3655b573d00ffef776
If the dialog gets accepted right before sending the signal, KisPart
can't determine the current main window because qApp->activeWindow()
is Null.

Though the widespread use of KisPart::currentMainwindow() deserves
some review, a more explicit definition of the target window would be
less error prone.

BUG:449670